Use min-height to ensure the all main area is covered by the background image

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,5 +1,12 @@
 .appContainer {
     display: flex;
     flex-direction: column; /* Stacks the children vertically */
-    height: 100vh; /* Full viewport height */
+    min-height: 100vh; /* Full viewport height */
+
+    
+    /* background-image: url('./assets/main/ubc-fountain-g.jpg');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; */
   }
