--- a/client/src/components/Main/Main.module.css
+++ b/client/src/components/Main/Main.module.css
@@ -3,12 +3,15 @@
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
-    height: 100vh;
+    background-attachment: fixed;
+    min-height: 100vh;/* use min-height to ensure the all main area is covered by the background image*/
     position: relative;
     margin-top: 150px;
+    /* margin-bottom:10px; */
     display: flex;
     justify-content: center;
     align-items: center;
+    /* overflow: auto; */
   }
 
 .main::after {
